dom/canvas/ClientWebGLContext.cpp
@@ -535,28 +535,18 @@ Maybe<layers::SurfaceDescriptor> ClientWebGLContext::GetFrontBuffer(
   child->FlushPendingCmds();
 
   Maybe<layers::SurfaceDescriptor> ret;
+  auto& info = child->GetFlushedCmdInfo();
 
   // If valid remote texture data was set for async present, then use it.
   const auto& ownerId = fb ? fb->mRemoteTextureOwnerId : mRemoteTextureOwnerId;
   const auto& textureId = fb ? fb->mLastRemoteTextureId : mLastRemoteTextureId;
   auto& needsSync = fb ? fb->mNeedsRemoteTextureSync : mNeedsRemoteTextureSync;
   if (ownerId && textureId) {
-    auto& info = child->GetFlushedCmdInfo();
-    if (!gfx::gfxVars::WebglOopAsyncPresentForceSync() &&
-        info.flushesSinceLastCongestionCheck.isNothing()) {
-      // Enabling checking of increase of flush cmds.
-      info.flushesSinceLastCongestionCheck = Some(0);
-    }
     const auto tooManyFlushes = 10;
-    if (info.flushesSinceLastCongestionCheck.isSome()) {
-      // If there are many flushed cmds, force synchronous IPC to avoid too many
-      // pending ipc messages.
-      if (info.flushesSinceLastCongestionCheck.ref() > tooManyFlushes) {
-        needsSync = true;
-      }
-      // Reset flushesSinceLastCongestionCheck
-      info.flushesSinceLastCongestionCheck = Some(0);
-      info.congestionCheckGeneration++;
+    // If there are many flushed cmds, force synchronous IPC to avoid too many
+    // pending ipc messages.
+    if (info.flushesSinceLastCongestionCheck > tooManyFlushes) {
+      needsSync = true;
     }
     if (XRE_IsParentProcess() ||
         gfx::gfxVars::WebglOopAsyncPresentForceSync() || needsSync) {
@@ -565,10 +555,18 @@ Maybe<layers::SurfaceDescriptor> ClientWebGLContext::GetFrontBuffer(
       // will continue to use the remote texture descriptor after.
       (void)child->SendGetFrontBuffer(fb ? fb->mId : 0, vr, &ret);
     }
+    // Reset flushesSinceLastCongestionCheck
+    info.flushesSinceLastCongestionCheck = 0;
+    info.congestionCheckGeneration++;
+
     return Some(layers::SurfaceDescriptorRemoteTexture(*textureId, *ownerId));
   }
 
   if (!child->SendGetFrontBuffer(fb ? fb->mId : 0, vr, &ret)) return {};
+
+  // Reset flushesSinceLastCongestionCheck
+  info.flushesSinceLastCongestionCheck = 0;
+  info.congestionCheckGeneration++;
 
   return ret;
 }
